vlib/v/checker/tests/enum_field_value_duplicate_e.vv
enum MyEnum {
	a = one
	b
	c = one
}

const one = 1 + 1

fn main() {
	$for val in MyEnum.values {
		println('> name: ${val.name} | value: ${val.value}')
	}
}
